erDiagram
  department ||--o{ sys_user : contains
  sys_user ||--o{ visit_apply : hosts
  visitor ||--o{ visit_apply : submits
  department ||--o{ visit_apply : approves_scope
  visit_apply ||--o{ approval_record : approvals
  visit_apply ||--o| pass_code : pass
  pass_code ||--o{ access_record : gate_verify
  campus_gate ||--o{ access_record : gate
  visitor ||--o{ blacklist : risk
  sys_user ||--o{ operation_log : audit
  sys_user ||--o{ notice : message
  sys_user ||--o{ sys_user_role : has
  sys_role ||--o{ sys_user_role : assigned
  sys_role ||--o{ sys_role_permission : owns
  sys_permission ||--o{ sys_role_permission : grants

  visitor {
    bigint id PK
    string visitor_name
    string phone
    string id_number
  }

  visit_apply {
    bigint id PK
    string apply_no
    bigint visitor_id FK
    bigint host_user_id FK
    string apply_status
    string access_status
  }

  approval_record {
    bigint id PK
    bigint apply_id FK
    string approval_step
    string approval_result
  }

  pass_code {
    bigint id PK
    bigint apply_id FK
    string pass_code
    string pass_status
  }

  access_record {
    bigint id PK
    bigint apply_id FK
    bigint entry_gate_id FK
    string access_status
  }

  campus_gate {
    bigint id PK
    string gate_name
    string gate_type
  }

  blacklist {
    bigint id PK
    bigint visitor_id FK
    string level
    string status
  }

  department {
    bigint id PK
    string dept_name
  }

  sys_user {
    bigint id PK
    string username
    string real_name
    string user_type
  }

  sys_role {
    bigint id PK
    string role_code
  }

  sys_permission {
    bigint id PK
    string permission_code
  }

  sys_user_role {
    bigint id PK
    bigint user_id FK
    bigint role_id FK
  }

  sys_role_permission {
    bigint id PK
    bigint role_id FK
    bigint permission_id FK
  }

  notice {
    bigint id PK
    bigint receiver_user_id FK
    string title
  }

  operation_log {
    bigint id PK
    bigint operator_user_id FK
    string module_name
  }